2005-08-14  Rodney Dawes  <dobey@novell.com>

	* theme-thumbnail.c (create_image): Get the Example icon that is
	specified by the icon theme, if it exists, and then fall back through
	a better list of icons to use. Gnome uses gnome-fs-directory currently
	for folders, so we should prefer that over folder, but the icon naming
	spec lists x-directory-normal for standard folders, so we should prefer
	that above other folders

	This fixes issues with the wrong icon being drawn in the thumbnail, due
	to the icon theme providing the gnome folder icon, but inheriting from
	another theme which provides a different icon named "folder" for KDE or
	other desktops

2005-07-27  Sebastien Bacher  <seb128@debian.org>

	* capplet-util.c: (capplet_set_icon): set a default icon for capplets, 
	patch by Jaap A. Haitsma <jaap@haitsma.org> (Closes: #305086).

2005-07-11  Rodney Dawes  <dobey@novell.com>

	* capplet-util.c (capplet_set_icon): Remove the unref call on the
	GtkIconTheme object to avoid crashing

	Fixes #310037

2005-07-10  Rodney Dawes  <dobey@novell.com>

	* capplet-util.c (capplet_set_icon): Update to use the GtkIconTheme
	API instead of the deprecated GnomeIconTheme API
	Based on patch from Jan de Groot

	Fixes #171679

2005-06-30  William Jon McCann  <mccann@jhu.edu>

	* file-transfer-dialog.c: Don't include gnome.h
	(file_transfer_dialog_update_num_files) 
	(file_transfer_dialog_set_prop, eel_gtk_label_make_bold) 
	(create_titled_label, file_transfer_dialog_init) 
	(file_transfer_dialog_update_cb):
	HIG updates and make consistent with nautilus transfer
	progress dialog.

2005-03-02  Shakti Sen  <shprasad@novell.com>

	* gnome-theme-info.c (read_icon_theme): Do not add the Icon Theme if
	the key 'Hidden' is 'true' in the index.theme file.

	Fixes bug #168348

2005-05-22  Sebastien Bacher  <seb128@debian.org>

	* gconf-property-editor.c: (peditor_font_value_changed),
	(peditor_font_widget_changed), (gconf_peditor_new_font):
	* gconf-property-editor.h: 