@@ -1,3 +1,10 @@
+2005-10-11  Muktha  <muktha.narayan@wipro.com>
+
+	* gnome-theme-manager.h:
+	* gnome-theme-manager.c (apply_font_clicked): Update the desktop 
+	font in addition to the application font when 'apply font' in 
+	large print themes is selected. Fixes #123551.
+
 2005-02-08  Sebastien Bacher  <seb128@debian.org>
 
 	* gnome-theme-installer.c: (file_theme_type), (transfer_done_cb),
