@@ -1,3 +1,12 @@
+2005-10-11  Muktha  <muktha.narayan@wipro.com>
+
+	* gnome-theme-info.h:
+	* gnome-theme-info.c (gnome_theme_read_meta_theme)
+	(gnome_theme_meta_info_free) (gnome_theme_meta_info_print)
+	(gnome_theme_meta_info_compare): Update the desktop font in 
+	addition to the application font when 'apply font' in large print
+	themes is selected. Fixes #123551.
+ 
 2005-08-14  Rodney Dawes  <dobey@novell.com>
 
 	* theme-thumbnail.c (create_image): Get the Example icon that is
